# genid

./: Cargo.toml  LICENSE  README.md
src/: args.yml  gaid.rs  gaid_helper.rs  learn.rs  main.rs  snowflake.rs  uuids.rs
