[package]
name = "genid"
version = "0.1.0"
authors = ["Blake <bleonard252@rocketmail.com>"]
edition = "2018"
description = "Generate various types of IDs from the command line"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.1", features = ["serde", "v1", "v3", "v4", "v5"] }
clap = { version = "~2.33.3", features = ["yaml"] }