[package]
name = "genid"
version = "1.0.0"
authors = ["Blake <bleonard252@rocketmail.com>"]
edition = "2018"
description = "Generate various types of IDs from the command line"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.1", features = ["serde", "v1", "v3", "v4", "v5"] }
clap = { version = "~2.33.3", features = ["yaml"] }
sha2 = "0.9.1"
num-bigint = "0.3.0"
num-traits = "0.2.12"
rand = { version = "0.7.3", features = ["std"] }
chrono = "0.4"